# MesTCP

./: CMakeLists.txt
MesTCPClient/: CMakeLists.txt
MesTCPClient/src/: client.cpp  main.cpp
MesTCPServer/: CMakeLists.txt
MesTCPServer/src/: main.cpp  server.cpp
client/: CMakeLists.txt
client/include/: net_client.h
client/src/: Client.cpp
include/: net.h  net_common.h  net_connection.h  net_message.h  net_queue.h
server/: CMakeLists.txt
server/include/: net_server.h
server/src/: Server.cpp
